k8s/workload/beacon.yaml
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: beacon-sa
  namespace: workload-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beacon-deployment
  namespace: workload-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beacon
  template:
    metadata:
      labels:
        app: beacon
    spec:
      serviceAccountName: beacon-sa
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.25.1
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: envoy-conifg
          mountPath: /etc/envoy
          readOnly: true
        - name: spiffe-workload-api
          mountPath: /opt/spire/sockets
          readOnly: true
      - name: beacon
        image: troydai/grpcbeacon:v0.8.2
        volumeMounts:
        - name: spiffe-workload-api
          mountPath: /opt/spire/sockets
          readOnly: true
      # - name: toolbox
      #   image: troydai/spire-toolbox:v0.1.0
      #   volumeMounts:
      #   - name: spiffe-workload-api
      #     mountPath: /opt/spire/sockets
      #     readOnly: true
      volumes:
        - name: spiffe-workload-api
          csi:
            driver: "csi.spiffe.io"
            readOnly: true
        - name: envoy-conifg
          configMap:
            name: beacon-config
            items:
            - key: envoy-config
              path: envoy.yaml
