k8s/workload/workloads.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beacon-deployment
  namespace: workload-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beacon
  template:
    metadata:
      labels:
        app: beacon
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.25.1
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: envoy-conifg
          mountPath: /etc/envoy
          readOnly: true
      - name: beacon
        image: troydai/grpcbeacon:v0.8.2
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: spiffe-workload-api
          mountPath: /opt/spire/sockets
          readOnly: true
      volumes:
        - name: spiffe-workload-api
          csi:
            driver: "csi.spiffe.io"
            readOnly: true
        - name: envoy-conifg
          configMap:
            name: beacon-config
            items:
            - key: envoy-config
              path: envoy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prober-deployment
  namespace: workload-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prober
  template:
    metadata:
      labels:
        app: prober
    spec:
      containers:
      - name: prober
        image: troydai/grpcprober:v0.8.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: spiffe-workload-api
          mountPath: /opt/spire/sockets
          readOnly: true
        env:
        - name: SERVER_ADDRESS
          valueFrom:
            configMapKeyRef:
              name: prober-config
              key: beacon_addr
        - name: CLIENT_INTERVAL
          valueFrom:
            configMapKeyRef:
              name: prober-config
              key: prober_interval
      volumes:
        - name: spiffe-workload-api
          csi:
            driver: "csi.spiffe.io"
            readOnly: true
